<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classroom Finder</string>
    <string name="title_classroom_detail">Classroom Details</string>
    <string-array name="campus_list">
        <item >East Bank</item>
        <item >West Bank</item>
        <item >St. Paul</item>
    </string-array>
        <string name="menu_refresh">Refresh</string>
        <string name="preferences_server">Server Settings</string>
        <string name="preferences_search_url">Server Main URL</string>
        <string name="summary_preferences_server_url">Only change if you know what you are doing.</string>
        <string name="menu_search">Search</string>
        <string name="menu_settings">Settings</string>
        <string name="default_server">http://mikewadsten.com/classroom_finder/app.cgi</string>
        <string name="empty_class_list">Refresh needed</string>
        <string-array name="campus_key_list">
            <item >east</item>
            <item >west</item>
            <item >stpaul</item>
        </string-array>
            <string name="preferences_info_url">Server Space Info URL</string>
            <string name="default_server_space">http://mikewadsten.com/classroom_finder/space.cgi</string>
            <string-array name="server_search_names">
                <item >Default (brontasaur.us)</item>
                <item >MikeWadsten.com</item>
            </string-array>
            <string-array name="server_search_urls">
                <item >http://brontasaur.us/search.json</item>
                <item >http://mikewadsten.com/classroom_finder/app.cgi</item>
            </string-array>
            <string-array name="server_space_names">
                <item >Default (brontasaur.us)</item>
                <item >MikeWadsten.com</item>
            </string-array>
            <string-array name="server_space_urls">
                <item >http://brontasaur.us/spaceinfo.json</item>
                <item >http://mikewadsten.com/classroom_finder/space.cgi</item>
            </string-array>
            <string name="empty_search_result">No matches</string>
            <string name="search_title">Classroom Search</string>
            <string name="search_subtitle">Rooms matching \&quot;%s\&quot;</string>
            <string name="search_not_imp">Search is not implemented.</string>
            <string name="about_body"><![CDATA[
		<a href="http://brontasaur.us/about">More info</a>&nbsp;&nbsp;&middot;
		&nbsp;&nbsp;<a href="http://mikewadsten.com">App developer</a>
		<br /><br />
		The University of Minnesota Classroom Finder searches in a
		database we fill every hour for any unscheduled classrooms on
		the Twin Cities campus and presents the information in a
		meaningful way. Simply whip out your smartphone while wandering
		around on campus and you can instantly find a quiet,
		comfortable room to actually get work done.<br />
		<br />&bull; <b>Sort</b> the results by campus using the dropdown
		at the top of the screen.
		<br />&bull; <b>Click</b> on a class listing to see more information
		about the room in question.
		<br />&bull; You can even <b>search</b> for rooms by name.
		<br /><br />
		Thanks to Koushik Dutta for his
		<a href="http://github.com/koush/Widgets">Widgets</a> library.
                ]]></string>
            <string name="menu_about">About</string>
            <string name="close">Close</string>
            <string name="default_server_space">http://mikewadsten.com/classroom_finder/space.cgi</string>

</resources>